--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -26,7 +26,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update # Use 'validate' since you're using Liquibase
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
