--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,25 @@
             <version>5.10.0</version> <!-- Or latest -->
             <scope>test</scope>
         </dependency>
+        <!-- Zonky Embedded Postgres -->
+        <dependency>
+            <groupId>io.zonky.test</groupId>
+            <artifactId>embedded-postgres</artifactId>
+            <version>2.0.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.zonky.test</groupId>
+            <artifactId>embedded-database-spring-test</artifactId>
+            <version>2.3.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.25.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
