--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <!-- OpenAPI/Swagger UI for listing and exploring REST endpoints -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
         <!-- If you want to use kotlin-logging -->
         <dependency>
             <groupId>io.github.microutils</groupId>
